--- a/First task/index.html
+++ b/First task/index.html
@@ -1,58 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html" charset="utf-8">
-    <title>Вкусные рецепты</title>
-  </head>
-  <body>
-    
-    <style>
-      ul{
-        margin: 25px;
-        font-size: 20px
-      }
 
-      ol{
-        margin:15;
-        font-size: 18px;
-      }
-    </style>
+<head>
+  <meta http-equiv="Content-type" content="text/html" charset="utf-8">
+  <title>Вкусные рецепты</title>
+  <link rel="stylesheet" href="/style/style.css">
+</head>
 
-      <h1>Вкусные рецепты</h1>
-      <h2>Рулет из подчерёвка в мультиварке</h2>
-      <a href="/"><img src="/image/meat.jpg"></a>
-      <h3>Ингредиенты</h3>
-      <ul>
-        <li>Лавровый лист - 3 шт.</li>
-        <li>Свиная подчеревина - 1200 г</li>
-        <li>Соль крупнокристаллическая - 1 ст. л.</li>
-        <li>Соль крупнокристаллическая - 1 ст. л.</li>
-        <li>Специи гарам масала - 2 ч. л.</li>
-        <li>Чеснок - 1 головка</li>
-      </ul>
-      <h3>Приготовление</h3>
-      <ol>
-        <li>Для приготовления нам понадобится подчерёвок, желательно потоньше, а чтобы мяса было больше. Соль крупная, чеснок, 
-        лавровый лист и смесь острых перцев, я предпочитаю восточные смеси поэтому взяла гарам масалу, она и острая и ароматная. 
-        Каждый может выбрать свою любимую смесь перцев и воспользоваться ею.</li>
-        <hr>
-        <li>Мясо вымыть, а шкурку ещё раз выскоблить. Натереть мясо специями и солью. Нашпиговать чесноком.</li>
-        <hr>
-        <li>Скрутить подчерёвок в плотный рулет и завязать веревочкой. Если есть, можно воспользоваться металлическими зажимами 
-        для рулетов или силиконовыми завязками.</li>
-        <hr>
-        <li>В мультиварку положить рулет и обжарить в режиме «Жарка» со всех сторон.</li>
-        <hr>
-        <li>Обжаренный рулет помещаем в рукав для запекания вместе с лавровым листом, и фиксируем края степлером. 
-        В мультиварку наливаем 4 мультичашки воды, кладём рулет и ставим в режим «Тушение» на 2 часа. Закрываем крышкой. 
-        Через час переворачиваем и, если надо, доливаем 1 мультичашку кипятка, оставляем до готовности.</li>
-        <hr>
-        <li>Готовый рулет вынимаем из рукава и кладём под пресс до остывания.</li>
-        <hr>
-        <li>Остывший до комнатной температуры рулет заворачиваем в фольгу с пекарской бумагой 
-        и убираем на ночь в холодильник, утром можно подавать.</li>
-        <hr>
-        <li>С остывшего рулета удаляем верёвку, нарезаем на куски и подаём.</li>
-      </ol>
-  </body>
+<body>
+  <header>
+    <h1>Вкусные рецепты</h1>
+  </header>
+  <p>На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны категории блюд.
+    Приятного аппетита!)</p>
+  <div class="flex_row">
+    <a href="/categories/meat/index.html" class="for_margin">Приготовление мяса</a>
+    <a href="/categories/side_dishes/index.html" class="for_margin">Приготовление гарнира</a>
+  </div>
+</body>
+
 </html>
