Create signup form and update main page and styles

--- a/First task/index.html
+++ b/First task/index.html
@@ -9,7 +9,10 @@
 
 <body>
   <header>
-    <h1>Вкусные рецепты</h1>
+    <div class="flex_row">
+      <h1>Вкусные рецепты</h1>
+      <a href="sign_up.html" class="for_margin">Зарегистрироваться</a>
+    </div>
   </header>
   <p>На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны категории блюд.
     Приятного аппетита!)</p>
