--- a/First task/index.html
+++ b/First task/index.html
@@ -9,12 +9,10 @@
 
 <body>
   <header>
-    <div class="flex_row">
-      <h1>Вкусные рецепты</h1>
-      <a href="sign_up.html" class="for_margin">Зарегистрироваться</a>
-    </div>
+    <a href="sign_up.html" class="sign_up">Зарегистрироваться</a>
+    <h1 class="name_site">Вкусные рецепты</h1>
   </header>
-  <p>На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны категории блюд.
+  <p class="main">На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны категории блюд.
     Приятного аппетита!)</p>
   <div class="flex_row">
     <a href="/categories/meat/index.html" class="for_margin">Приготовление мяса</a>
