--- a/First task/sign_up.html
+++ b/First task/sign_up.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h3>Вкусные рецепты</h3>
+  <h2 class="name_site">Вкусные рецепты</h2>
   <h1>Регистрация на сайте</h1>
   <form action="/">
     <div class="flex_row">
