Create sign_in.html and style_for_margin_and_padding.scc. Change style on the all pages.

--- a/First task/index.html
+++ b/First task/index.html
@@ -5,19 +5,23 @@
   <meta http-equiv="Content-type" content="text/html" charset="utf-8">
   <title>Вкусные рецепты</title>
   <link rel="stylesheet" href="/style/style.css">
+  <!-- <link rel="stylesheet" href="/style/style_for_margin_and_padding.css"> -->
 </head>
 
 <body>
-  <header>
+  <header class="main_header">
     <a href="sign_up.html" class="sign_up">Зарегистрироваться</a>
-    <h1 class="name_site">Вкусные рецепты</h1>
+    <a href="sign_in.html" class="sign_in">Вход</a>
+    <form name="search" action="#" method="get">
+      <h1 class="name_site">Вкусные рецепты</h1>
+      <div class="categories">
+        <a href="/categories/meat/index.html" class="for_margin">Приготовление мяса</a>
+        <a href="/categories/side_dishes/index.html" class="for_margin">Приготовление гарнира</a>
+      </div>
   </header>
-  <p class="main">На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны категории блюд.
+  <p class="main">На этом сайте найдете для себя вкусные блюда, которые можно легко сделать. Ниже представленны
+    категории блюд.
     Приятного аппетита!)</p>
-  <div class="flex_row">
-    <a href="/categories/meat/index.html" class="for_margin">Приготовление мяса</a>
-    <a href="/categories/side_dishes/index.html" class="for_margin">Приготовление гарнира</a>
-  </div>
 </body>
 
 </html>
