--- a/First task/sign_up.html
+++ b/First task/sign_up.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-  <h2 class="name_site">Вкусные рецепты</h2>
+  <header class="main_header">
+    <h2 class="name_site">Вкусные рецепты</h2>
+  </header>
   <h1>Регистрация на сайте</h1>
   <form action="/">
-    <div class="flex_row">
+    <div class="sign_up_form">
       <div class="login">
         <h5>Введите ваш логин</h5>
         <input type="text">
@@ -24,7 +26,7 @@
         <input type="password">
       </div>
     </div>
-    <div class="sign_up">
+    <div class="sign_up_form">
       <input type="submit">
     </div>
   </form>
